--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ h1 {
 
 body {
     background-color: #fc6998;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 p {
